# dev-agent-workshop-starter

./: .gitignore  CLAUDE.md  Dockerfile  README.md  WORKSHOP.md  fly.toml  pyproject.toml  setup.sh
.claude/: settings.json
.claude/agents/: code-reviewer.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CategoryFilter.tsx  Header.tsx  ProductTable.tsx  SearchBar.tsx  StatsBar.tsx  StatusBadge.tsx
scripts/: check-api.sh  lint-check.sh  run-dev.sh
src/: database.py  main.py  models.py  seed_data.py
tests/: conftest.py  test_filtering.py  test_products.py  test_stats.py
